kustomization/components/networkpolicy-allow-to-api-server/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-api-server-networkpolicy
spec:
  egress:
    - ports:
        - port: 443
      to:
        - ipBlock:
            cidr: 172.17.0.1/32
    - ports:
        - port: 6443
      to:
        - ipBlock:
            cidr: 10.11.0.101/32 # node01
  podSelector:
    matchLabels:
      hogs.tswn.us/api-server-client: "true"
  policyTypes:
    - Egress
